# manager_launch

./: CMakeLists.txt  package.xml
launch/: human_teaching.py  kuka_zed_tac3d.py  open_door.py  open_drawer.py  recurrent_and_recorder.py
