<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manager_launch</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="mingchaoqi0325@gmail.com">qi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>zed_components</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>lbr_fri_ros2</exec_depend>
  <exec_depend>lbr_ros2_control</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tutorial_interfaces</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zed_components</exec_depend>
  <exec_depend>zed_interfaces</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>rosbag2</depend>
  <depend>rosbag2_storage</depend>
  <depend>ament_index_python</depend>
  <depend>data_recorder</depend>
  <depend>sensor_msgs</depend>
  <depend>lbr_fri_idl</depend>
  <depend>lbr_demos_advanced_py</depend>
  <depend>lbr_bringup</depend>
  <depend>tac3d</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

